--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Icons -->
+    <script defer src="/your-path-to-fontawesome/js/brands.js"></script>
+    <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
+    <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone&family=Dancing+Script&family=Grey+Qo&family=Italianno&family=Petit+Formal+Script&display=swap" rel="stylesheet">
+    <title>StageCoach Café</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
