--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Icons -->
-    <script defer src="/your-path-to-fontawesome/js/brands.js"></script>
-    <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
-    <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
+    <head>
+      <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
+    </head>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
